Fixed column gap by changing width to 60%

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -20,6 +20,9 @@ h2 {
 #aboutme {
     align: center";
 }
+.contentBox {
+    column-gap: 40px;
+}
 
 /*
 .grid-container {
